--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
         </div>
         <div class="footer-colum">
             <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
         </div>
     </footer>
 </body>
